unpackaged/main/default/objects/TermsAndCondition__c/TermsAndCondition__c.object-meta.xml
<CustomObject>
    <label>TermsAndCondition</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TermsAndConditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>