unpackaged/main/default/objects/TermsAndCondition__c/fields/Additional_Term_Text__c.field-meta.xml
<CustomField>
    <fullName>Additional_Term_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Term Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>