unpackaged/main/default/objects/TermsAndCondition__c/fields/Charge_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type_Value__c</fullName>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months&#39; rent</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>