unpackaged/main/default/objects/TermsAndCondition__c/fields/Charge_Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_Value__c</fullName>
    <label>Charge Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>