unpackaged/main/default/objects/TermsAndCondition__c/fields/Charge_Value_Freeze_For_Sch__c.field-meta.xml
<CustomField>
    <fullName>Charge_Value_Freeze_For_Sch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Value Freeze For Sch</label>
    <type>Checkbox</type>
</CustomField>