unpackaged/main/default/objects/TermsAndCondition__c/fields/Charge_Value_Freeze_For_T_L__c.field-meta.xml
<CustomField>
    <fullName>Charge_Value_Freeze_For_T_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Value Freeze For T&amp;L</label>
    <type>Checkbox</type>
</CustomField>