unpackaged/main/default/objects/TermsAndCondition__c/fields/Customer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Terms And Conditions</relationshipLabel>
    <relationshipName>TermsAndConditions</relationshipName>
    <type>Lookup</type>
</CustomField>