unpackaged/main/default/objects/TermsAndCondition__c/fields/Default_SCH__c.field-meta.xml
<CustomField>
    <fullName>Default_SCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default SCH</label>
    <type>Checkbox</type>
</CustomField>