unpackaged/main/default/objects/TermsAndCondition__c/fields/Default_TL__c.field-meta.xml
<CustomField>
    <fullName>Default_TL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default T&amp;L</label>
    <type>Checkbox</type>
</CustomField>