unpackaged/main/default/objects/TermsAndCondition__c/fields/Is_Required_Sch_Term__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Sch_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required Sch Term</label>
    <type>Checkbox</type>
</CustomField>