unpackaged/main/default/objects/TermsAndCondition__c/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Data</label>
    <type>Checkbox</type>
</CustomField>