unpackaged/main/default/objects/TermsAndCondition__c/fields/IsRequired_TL_Term__c.field-meta.xml
<CustomField>
    <fullName>IsRequired_TL_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required T&amp;L Term</label>
    <type>Checkbox</type>
</CustomField>