unpackaged/main/default/objects/TermsAndCondition__c/fields/Pdf_Print_Order__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Print_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pdf Print Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>