unpackaged/main/default/objects/TermsAndCondition__c/fields/Remark_Type__c.field-meta.xml
<CustomField>
    <fullName>Remark_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>