unpackaged/main/default/objects/TermsAndCondition__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>