unpackaged/main/default/objects/TermsAndCondition__c/fields/Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>Terms_Description__c</fullName>
    <label>Terms Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DARB consumption</fullName>
            </value>
            <value>
                <fullName>SALIK consumption</fullName>
            </value>
            <value>
                <fullName>Insurance Excess Charge</fullName>
            </value>
            <value>
                <fullName>Accident Faulty Penalty</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 1st Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 2nd Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 3rd Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 4th Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 5th Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty Months - 6th Year AED</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty after issuing LPO</fullName>
            </value>
            <value>
                <fullName>Pre mature penalty charge (School Transportation)</fullName>
            </value>
            <value>
                <fullName>Quotation Validity</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Payment terms</fullName>
            </value>
            <value>
                <fullName>Laws or Decisions</fullName>
            </value>
            <value>
                <fullName>Traffic fines</fullName>
            </value>
            <value>
                <fullName>Traffic Fines Admin Fees</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Accident Repair</fullName>
            </value>
            <value>
                <fullName>Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Price (School Transportation)</fullName>
            </value>
            <value>
                <fullName>Duty Service</fullName>
            </value>
            <value>
                <fullName>Fuel Price</fullName>
            </value>
            <value>
                <fullName>Fuel differences</fullName>
            </value>
            <value>
                <fullName>The cost of extra trip</fullName>
            </value>
            <value>
                <fullName>Nursery term</fullName>
            </value>
            <value>
                <fullName>Breakdown Term</fullName>
            </value>
            <value>
                <fullName>Impound Vehicle Recovery Charges</fullName>
            </value>
            <value>
                <fullName>Damage Penalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>